--- a/src/app/_components/home-page/home-page.html
+++ b/src/app/_components/home-page/home-page.html
@@ -10,7 +10,7 @@
           class="block">Wybierz nowy samochód i ciesz się pełnym komfortem jazdy bez niespodzianek i ukrytych opłat.</span>
       </div>
       <div>
-        <flexmile-link title="Pokaż pełną ofertę" url="/list" icon="pi-arrow-right"
+        <flexmile-link title="Pokaż pełną ofertę" url="/oferty" icon="pi-arrow-right"
                        iconPosition="right"></flexmile-link>
       </div>
     </div>
