--- a/src/app/_components/offer-new/_components/offer-order/offer-order.html
+++ b/src/app/_components/offer-new/_components/offer-order/offer-order.html
@@ -1,1 +1,91 @@
-<p>offer-order works!</p>
+<div class="offer-order">
+  <div class="go-back px-7 py-5">
+    <span (click)="backToDetails()"><i class="pi pi-arrow-left"></i> Wróć</span>
+  </div>
+  <div class="container" [formGroup]="orderForm">
+
+    <div class="flex">
+      <div class="offer-order_left">
+        <div>
+          <h2 class="pb-3">Złóż zamówienie</h2>
+          <span>Jesteś o krok od nowego samochodu! Wypełnij krótki formularz, a nasz doradca potwierdzi dostępność wybranego auta i ustali z Tobą szczegóły odbioru.
+Złożenie zamówienia nic nie kosztuje i nie stanowi zobowiązania.</span>
+          <div class="offer-order-details">
+            <div class="offer-order-details_section">
+              <h4 class="mb-5">Szczegóły zamówienia</h4>
+              <div>
+                <span>Czas trwania umowy <span> (w miesiącach)</span></span>
+                <div class="periods flex gap-2 flex-wrap pb-5">
+                  @for (period of details().pricing.rental_periods; track period) {
+                    <flexmile-button [btnClass]="isPeriodActive(period) ? 'active' : ''" [label]="period"
+                                     color="secondary" size="medium" (click)="selectPeriod(period)"></flexmile-button>
+                  }
+                </div>
+              </div>
+              <div>
+                <span>Roczny limit kilometrów <span> (tys. km)</span></span>
+                <div class="mileage flex gap-2 flex-wrap pb-5">
+                  @for (limit of details().pricing.mileage_limits; track limit) {
+                    <flexmile-button [btnClass]="isMileageLimitActive(limit) ? 'active' : ''"
+                                     label="{{limit | number:'1.0-0'}}" color="secondary"
+                                     size="medium" (click)="selectMileageLimit(limit)"></flexmile-button>
+                  }
+                </div>
+              </div>
+              <div>
+                <span class="flex align-items-center gap-2">Preferowane miejsce odbioru <flexmile-tooltip
+                  [config]="{text: 'Pytanie ma charakter informacyjny. Decyzję można zmienić w kolejnych etapach', position: 'top'}"> <svg
+                  xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                  viewBox="0 0 16 16" fill="none">
+<path
+  d="M8 0C12.4062 0 16 3.59375 16 8C16 12.4375 12.4062 16 8 16C3.5625 16 0 12.4375 0 8C0 3.59375 3.5625 0 8 0ZM8 14.5C11.5625 14.5 14.5 11.5938 14.5 8C14.5 4.4375 11.5625 1.5 8 1.5C4.40625 1.5 1.5 4.4375 1.5 8C1.5 11.5938 4.40625 14.5 8 14.5ZM9.25 10.5C9.65625 10.5 10 10.8438 10 11.25C10 11.6875 9.65625 12 9.25 12H6.75C6.3125 12 6 11.6875 6 11.25C6 10.8438 6.3125 10.5 6.75 10.5H7.25V8.5H7C6.5625 8.5 6.25 8.1875 6.25 7.75C6.25 7.34375 6.5625 7 7 7H8C8.40625 7 8.75 7.34375 8.75 7.75V10.5H9.25ZM8 6C7.4375 6 7 5.5625 7 5C7 4.46875 7.4375 4 8 4C8.53125 4 9 4.46875 9 5C9 5.5625 8.53125 6 8 6Z"
+  fill="#863087"/>
+                </svg></flexmile-tooltip></span>
+                <div>
+                  <label>
+                    <input type="radio" formControlName="pickup_location" [value]="pickupLocation.home_delivery"/>
+                    Odbiór w salonie
+                  </label>
+
+                  <label>
+                    <input type="radio" formControlName="pickup_location" [value]="pickupLocation.salon"/>
+                    Darmowa dostawa pod dom
+                  </label>
+                </div>
+              </div>
+            </div>
+            <div class="offer-order-details_section">
+              <h4 class="mb-5">Dane firmy</h4>
+              <div class="grid">
+                <div class="col-6 order-input">
+                  <flexmile-input [classList]="'w-full'" label="Nazwa firmy" placeholder="Wpisz nazwę firmy"
+                                  [control]="orderForm.get('company_name')"
+                                  inputId="company_name"></flexmile-input>
+                </div>
+                <div class="col-6 order-input">
+                  <flexmile-input [classList]="'w-full'" label="NIP" placeholder="Wpisz NIP"
+                                  [control]="orderForm.get('nip')"
+                                  inputId="nip"></flexmile-input>
+                </div>
+                <div class="col-6 order-input">
+                  <flexmile-input [classList]="'w-full'" label="Email" placeholder="Wpisz Email"
+                                  [control]="orderForm.get('email')"
+                                  inputId="email"></flexmile-input>
+                </div>
+                <div class="col-6 order-input">
+                  <flexmile-input [classList]="'w-full'" label="Telefon" placeholder="Wpisz Telefon"
+                                  [control]="orderForm.get('phone')"
+                                  inputId="phone"></flexmile-input>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="offer-order_right"></div>
+    </div>
+
+
+    {{ orderForm.getRawValue() | json }}
+  </div>
+</div>
