--- a/src/app/_components/offer-new/offer-new.html
+++ b/src/app/_components/offer-new/offer-new.html
@@ -2,7 +2,7 @@
   @if (!ordering) {
     <flexmile-offer-details [similarOffers]="similarOffers" [details]="offerData" (nextStep)="showNextStep($event)"></flexmile-offer-details>
   } @else {
-    <flexmile-offer-order [orderObject]="orderObject!"></flexmile-offer-order>
+    <flexmile-offer-order [details]="offerData" [orderObject]="orderObject!" (previousStep)="ordering = !$event"></flexmile-offer-order>
   }
 </div>
 
