--- a/public/layout/scss/_variables.scss
+++ b/public/layout/scss/_variables.scss
@@ -15,7 +15,7 @@
   --color-black-25: #FAFAFA;
   --color-black-50: #F2F2F2;
   --color-black-100: #E2E2E2;
-  --color-black-200: #E5E5E5;
+  --color-black-200: #B8B8B8;
   --color-black-300: #D4D4D4;
   --color-black-400: #8F8F8F;
   --color-black-600: #666666;
