--- a/src/app/_components/offer-new/_components/offer-details/offer-details.html
+++ b/src/app/_components/offer-new/_components/offer-details/offer-details.html
@@ -62,7 +62,7 @@
                 </div>
               </div>
               <div class="pb-5">
-                <div class="pb-2">Roczny limit kilometrów</div>
+                <div class="pb-2">Roczny limit kilometrów {{offerService.selectedMileageLimit}}</div>
                 <div class="mileage flex gap-2 flex-wrap">
                   @for (limit of details().pricing.mileage_limits; track limit) {
                     <flexmile-button [btnClass]="isMileageLimitActive(limit) ? 'active' : ''"
@@ -72,7 +72,7 @@
                 </div>
               </div>
               <div class="offer__body-form-price">
-                <div class="p pb-5">{{ calculatedPrice | number:'1.0-0' }} PLN <span>/netto mies.</span></div>
+                <div class="p pb-5">{{ offerService.calculatedPrice | number:'1.0-0' }} PLN <span>/netto mies.</span></div>
                 <div class="b">
                   <flexmile-button [disabled]="!canOrder()" [btnClass]="'w-full'" label="Zamów" iconPosition="right"
                                    icon="pi-arrow-right"
