--- a/src/app/_components/home-page/home-page.html
+++ b/src/app/_components/home-page/home-page.html
@@ -24,3 +24,4 @@
 <flexmile-why-us></flexmile-why-us>
 <flexmile-faq></flexmile-faq>
 <flexmile-opinions></flexmile-opinions>
+<flexmile-player label="Kim jesteśmy?" fileName="dzien_dobry.m4a"></flexmile-player>
