--- a/src/app/_components/home-page/home-page.html
+++ b/src/app/_components/home-page/home-page.html
@@ -17,6 +17,7 @@
     <div class="home-offers--list">
       @if(offersList?.offers?.length){
         <flexmile-list [hideHeader]="true" [offerList]="offersList"></flexmile-list>
+        <flexmile-homepage-list></flexmile-homepage-list>
       }
     </div>
   </div>
