--- a/src/app/_components/home-page/_components/homepage-list/homepage-list.html
+++ b/src/app/_components/home-page/_components/homepage-list/homepage-list.html
@@ -1,1 +1,136 @@
-<p>homepage-list works!</p>
+@if (offerList()?.offers?.length) {
+  <div class="list--body">
+    <div class="list--body-grid">
+      @for (offer of offerList()?.offers; track offer; let index = $index) {
+        <div class="product">
+        <flexmile-car></flexmile-car>
+        </div>
+      }
+    </div>
+  </div>
+}
+
+
+
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; Rząd 2: 3 produkty &ndash;&gt;-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+
+<!--        &lt;!&ndash; Rząd 3: Banner 100% &ndash;&gt;-->
+<!--        <div class="banner">-->
+<!--          <flexmile-banner-list label="Brak wkładu własnego - " position="center"-->
+<!--                                description="Brak konieczności wykupu Auta!"></flexmile-banner-list>-->
+<!--        </div>-->
+
+<!--        &lt;!&ndash; Rząd 4: 3 produkty &ndash;&gt;-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+
+<!--        &lt;!&ndash; Rząd 5: 1 produkt 100% &ndash;&gt;-->
+<!--        <div class="product-full">-->
+<!--          <flexmile-car [cardSize]="badgeSizes.LG"></flexmile-car>-->
+<!--        </div>-->
+
+<!--        &lt;!&ndash; POWTÓRZENIE WZORCA &ndash;&gt;-->
+
+<!--        &lt;!&ndash; Rząd 1: 3 produkty &ndash;&gt;-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+
+<!--        &lt;!&ndash; Rząd 2: 3 produkty &ndash;&gt;-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+
+<!--        &lt;!&ndash; Rząd 3: Banner 100% &ndash;&gt;-->
+<!--        <div class="banner">-->
+<!--          <flexmile-banner-list position="center" label="Rata najmu - "-->
+<!--                                description="100% w koszty firmy!"></flexmile-banner-list>-->
+<!--        </div>-->
+
+<!--        &lt;!&ndash; Rząd 4: 3 produkty &ndash;&gt;-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+
+<!--        &lt;!&ndash; Rząd 5: 1 produkt 100% &ndash;&gt;-->
+<!--        <div class="product-full">-->
+<!--          <flexmile-car [cardSize]="badgeSizes.LG"></flexmile-car>-->
+<!--        </div>-->
+
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+
+<!--        <div class="banner">-->
+<!--          <flexmile-banner-list position="center" label="Rata najmu - "-->
+<!--                                description="100% w koszty firmy!"></flexmile-banner-list>-->
+<!--        </div>-->
+
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
+<!--        <div class="product">-->
+<!--          <flexmile-car></flexmile-car>-->
+<!--        </div>-->
