--- a/src/app/_components/home-page/home-page.html
+++ b/src/app/_components/home-page/home-page.html
@@ -16,8 +16,7 @@
     </div>
     <div class="home-offers--list">
       @if(offersList?.offers?.length){
-        <flexmile-list [hideHeader]="true" [offerList]="offersList"></flexmile-list>
-        <flexmile-homepage-list></flexmile-homepage-list>
+        <flexmile-homepage-list [offerList]="offersList"></flexmile-homepage-list>
       }
     </div>
   </div>
