--- a/src/app/_components/utilities/list/list.html
+++ b/src/app/_components/utilities/list/list.html
@@ -12,11 +12,11 @@
   <div class="list--body">
     @if (offerList()?.offers?.length) {
       <div class="list--body-grid">
-        @for (offer of offerList()?.offers; track trackByOfferId($index, offer)) {
-          <div class="product">
-            <flexmile-car></flexmile-car>
-          </div>
-        }
+<!--        @for (offer of offerList()?.offers; track trackByOfferId($index, offer)) {-->
+<!--          <div class="product">-->
+<!--&lt;!&ndash;            <flexmile-car></flexmile-car>&ndash;&gt;-->
+<!--          </div>-->
+<!--        }-->
       </div>
     } @else {
       <div class="no-offers">
