--- a/src/app/_components/utilities/offers-carousel/offers-carousel.html
+++ b/src/app/_components/utilities/offers-carousel/offers-carousel.html
@@ -7,7 +7,7 @@
     <owl-carousel-o [options]="customOptions">
       @for (slide of sliderArr; let i = $index; track i) {
         <ng-template carouselSlide>
-          <flexmile-car></flexmile-car>
+<!--          <flexmile-car></flexmile-car>-->
         </ng-template>
       }
     </owl-carousel-o>
