--- a/src/app/_components/utilities/player/player.html
+++ b/src/app/_components/utilities/player/player.html
@@ -1,5 +1,5 @@
-<div class="player">
-  <div class="player--button" (click)="togglePlay()">
+<div class="player"  (click)="togglePlay()">
+  <div class="player--button">
     @if (isPlaying()) {
       <svg xmlns="http://www.w3.org/2000/svg" width="11" height="13" viewBox="0 0 11 13" fill="none">
         <path
