--- a/src/app/_components/utilities/player/player.scss
+++ b/src/app/_components/utilities/player/player.scss
@@ -12,6 +12,7 @@
   align-items: center;
   justify-content: flex-start;
   gap: 12px;
+  cursor: pointer;
 
   &--label {
     color: var(--p-primary-900);
