--- a/src/app/_components/home-page/home-page.html
+++ b/src/app/_components/home-page/home-page.html
@@ -18,6 +18,9 @@
       @if(offersList?.offers?.length){
         <flexmile-homepage-list [offerList]="offersList"></flexmile-homepage-list>
       }
+      <div class="pt-5 pb-7 flex align-items-center justify-content-center">
+        <flexmile-button label="Zobacz więcej" iconPosition="right" icon="pi-arrow-right" btnClass="mr-3"></flexmile-button>
+      </div>
     </div>
   </div>
 </div>
