--- a/src/app/_components/home-page/_components/why-us/why-us.html
+++ b/src/app/_components/home-page/_components/why-us/why-us.html
@@ -1,1 +1,124 @@
-<p>why-us works!</p>
+<div class="why-us">
+  <div class="container borders pb-7">
+    <div style="height: 500px"></div>
+  </div>
+  <div class="container dreams py-7 ">
+    <div class="grid mt-0">
+      <div class="col-8">
+        <div>
+          <h2>Spełniamy Wasze <br> motoryzacyjne marzenia!</h2>
+          <span>Z Flexmile zyskujesz dostęp do najnowszych modeli bez długich zobowiązań <br>i formalności. Wybierz auto, które pasuje do Ciebie — komfortowo, szybko i na <br> własnych zasadach.</span>
+          <div>
+            <flexmile-button label="Sprawdź ofertę" iconPosition="right" icon="pi-arrow-right"
+                             btnClass="mr-3"></flexmile-button>
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div></div>
+      </div>
+    </div>
+  </div>
+  <div class="container why pb-7">
+    <div>
+      <h2>Dlaczego warto wybrać Flexmile?</h2>
+      <div class="description">
+        <span>Z Flexmile płacisz tylko za to, z czego korzystasz – bez zobowiązań, wkładu własnego i niespodzianek.  Po prostu wybierasz model, podpisujesz umowę online i jedziesz. Tak działa mobilność na Twoich zasadach.</span>
+      </div>
+      <div class="cars">
+        <div class="left"></div>
+        <div class="right"></div>
+      </div>
+      <div class="table">
+        <div class="table-left">
+          <div class="table-left_header">Wynajem flexmile - zalety!</div>
+          <div class="table-left_body">
+            <div>
+              <span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+<path
+  d="M11 7.25C11.4062 7.25 11.75 7.59375 11.75 8C11.75 8.4375 11.4062 8.75 11 8.75H8.75V11C8.75 11.4375 8.40625 11.75 8 11.75C7.5625 11.75 7.25 11.4375 7.25 11V8.75H5C4.5625 8.75 4.25 8.4375 4.25 8C4.25 7.59375 4.5625 7.25 5 7.25H7.25V5C7.25 4.59375 7.625 4.25 8 4.25C8.40625 4.25 8.75 4.59375 8.75 5V7.25H11ZM8 0C12.4062 0 16 3.59375 16 8C16 12.4375 12.4062 16 8 16C3.5625 16 0 12.4375 0 8C0 3.59375 3.5625 0 8 0ZM8 14.5C11.5625 14.5 14.5 11.5938 14.5 8C14.5 4.4375 11.5625 1.5 8 1.5C4.40625 1.5 1.5 4.4375 1.5 8C1.5 11.5938 4.40625 14.5 8 14.5Z"
+  fill="#B6CA40"/>
+</svg>
+              </span>
+              Brak wpłaty własnej
+            </div>
+            <div>       <span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+<path
+  d="M11 7.25C11.4062 7.25 11.75 7.59375 11.75 8C11.75 8.4375 11.4062 8.75 11 8.75H8.75V11C8.75 11.4375 8.40625 11.75 8 11.75C7.5625 11.75 7.25 11.4375 7.25 11V8.75H5C4.5625 8.75 4.25 8.4375 4.25 8C4.25 7.59375 4.5625 7.25 5 7.25H7.25V5C7.25 4.59375 7.625 4.25 8 4.25C8.40625 4.25 8.75 4.59375 8.75 5V7.25H11ZM8 0C12.4062 0 16 3.59375 16 8C16 12.4375 12.4062 16 8 16C3.5625 16 0 12.4375 0 8C0 3.59375 3.5625 0 8 0ZM8 14.5C11.5625 14.5 14.5 11.5938 14.5 8C14.5 4.4375 11.5625 1.5 8 1.5C4.40625 1.5 1.5 4.4375 1.5 8C1.5 11.5938 4.40625 14.5 8 14.5Z"
+  fill="#B6CA40"/>
+</svg>
+              </span>Serwis i opony w racie
+            </div>
+            <div>       <span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+<path
+  d="M11 7.25C11.4062 7.25 11.75 7.59375 11.75 8C11.75 8.4375 11.4062 8.75 11 8.75H8.75V11C8.75 11.4375 8.40625 11.75 8 11.75C7.5625 11.75 7.25 11.4375 7.25 11V8.75H5C4.5625 8.75 4.25 8.4375 4.25 8C4.25 7.59375 4.5625 7.25 5 7.25H7.25V5C7.25 4.59375 7.625 4.25 8 4.25C8.40625 4.25 8.75 4.59375 8.75 5V7.25H11ZM8 0C12.4062 0 16 3.59375 16 8C16 12.4375 12.4062 16 8 16C3.5625 16 0 12.4375 0 8C0 3.59375 3.5625 0 8 0ZM8 14.5C11.5625 14.5 14.5 11.5938 14.5 8C14.5 4.4375 11.5625 1.5 8 1.5C4.40625 1.5 1.5 4.4375 1.5 8C1.5 11.5938 4.40625 14.5 8 14.5Z"
+  fill="#B6CA40"/>
+</svg>
+              </span>Ubezpieczenie w racie
+            </div>
+            <div>       <span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+<path
+  d="M11 7.25C11.4062 7.25 11.75 7.59375 11.75 8C11.75 8.4375 11.4062 8.75 11 8.75H8.75V11C8.75 11.4375 8.40625 11.75 8 11.75C7.5625 11.75 7.25 11.4375 7.25 11V8.75H5C4.5625 8.75 4.25 8.4375 4.25 8C4.25 7.59375 4.5625 7.25 5 7.25H7.25V5C7.25 4.59375 7.625 4.25 8 4.25C8.40625 4.25 8.75 4.59375 8.75 5V7.25H11ZM8 0C12.4062 0 16 3.59375 16 8C16 12.4375 12.4062 16 8 16C3.5625 16 0 12.4375 0 8C0 3.59375 3.5625 0 8 0ZM8 14.5C11.5625 14.5 14.5 11.5938 14.5 8C14.5 4.4375 11.5625 1.5 8 1.5C4.40625 1.5 1.5 4.4375 1.5 8C1.5 11.5938 4.40625 14.5 8 14.5Z"
+  fill="#B6CA40"/>
+</svg>
+              </span>Prosta miesięczna rata
+            </div>
+            <div>       <span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+<path
+  d="M11 7.25C11.4062 7.25 11.75 7.59375 11.75 8C11.75 8.4375 11.4062 8.75 11 8.75H8.75V11C8.75 11.4375 8.40625 11.75 8 11.75C7.5625 11.75 7.25 11.4375 7.25 11V8.75H5C4.5625 8.75 4.25 8.4375 4.25 8C4.25 7.59375 4.5625 7.25 5 7.25H7.25V5C7.25 4.59375 7.625 4.25 8 4.25C8.40625 4.25 8.75 4.59375 8.75 5V7.25H11ZM8 0C12.4062 0 16 3.59375 16 8C16 12.4375 12.4062 16 8 16C3.5625 16 0 12.4375 0 8C0 3.59375 3.5625 0 8 0ZM8 14.5C11.5625 14.5 14.5 11.5938 14.5 8C14.5 4.4375 11.5625 1.5 8 1.5C4.40625 1.5 1.5 4.4375 1.5 8C1.5 11.5938 4.40625 14.5 8 14.5Z"
+  fill="#B6CA40"/>
+</svg>
+              </span>Oddajesz, wybierasz nowy
+            </div>
+          </div>
+        </div>
+        <div class="table-right">
+          <div class="table-right_header">Kupno auta - wady!</div>
+          <div class="table-right_body">
+            <div>
+              <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+<path
+  d="M11 7.25C11.4062 7.25 11.75 7.59375 11.75 8C11.75 8.4375 11.4062 8.75 11 8.75H5C4.5625 8.75 4.25 8.4375 4.25 8C4.25 7.59375 4.5625 7.25 5 7.25H11ZM8 0C12.4062 0 16 3.59375 16 8C16 12.4375 12.4062 16 8 16C3.5625 16 0 12.4375 0 8C0 3.59375 3.5625 0 8 0ZM8 14.5C11.5625 14.5 14.5 11.5938 14.5 8C14.5 4.4375 11.5625 1.5 8 1.5C4.40625 1.5 1.5 4.4375 1.5 8C1.5 11.5938 4.40625 14.5 8 14.5Z"
+  fill="#A3A3A3"/>
+</svg></span>
+              Wysoki koszt początkowy
+            </div>
+            <div>              <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"
+                                          fill="none">
+<path
+  d="M11 7.25C11.4062 7.25 11.75 7.59375 11.75 8C11.75 8.4375 11.4062 8.75 11 8.75H5C4.5625 8.75 4.25 8.4375 4.25 8C4.25 7.59375 4.5625 7.25 5 7.25H11ZM8 0C12.4062 0 16 3.59375 16 8C16 12.4375 12.4062 16 8 16C3.5625 16 0 12.4375 0 8C0 3.59375 3.5625 0 8 0ZM8 14.5C11.5625 14.5 14.5 11.5938 14.5 8C14.5 4.4375 11.5625 1.5 8 1.5C4.40625 1.5 1.5 4.4375 1.5 8C1.5 11.5938 4.40625 14.5 8 14.5Z"
+  fill="#A3A3A3"/>
+</svg></span>Serwis i opony po Twojej stronie
+            </div>
+            <div>              <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"
+                                          fill="none">
+<path
+  d="M11 7.25C11.4062 7.25 11.75 7.59375 11.75 8C11.75 8.4375 11.4062 8.75 11 8.75H5C4.5625 8.75 4.25 8.4375 4.25 8C4.25 7.59375 4.5625 7.25 5 7.25H11ZM8 0C12.4062 0 16 3.59375 16 8C16 12.4375 12.4062 16 8 16C3.5625 16 0 12.4375 0 8C0 3.59375 3.5625 0 8 0ZM8 14.5C11.5625 14.5 14.5 11.5938 14.5 8C14.5 4.4375 11.5625 1.5 8 1.5C4.40625 1.5 1.5 4.4375 1.5 8C1.5 11.5938 4.40625 14.5 8 14.5Z"
+  fill="#A3A3A3"/>
+</svg></span>Ubezpieczenie po Twojej stronie
+            </div>
+            <div>              <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"
+                                          fill="none">
+<path
+  d="M11 7.25C11.4062 7.25 11.75 7.59375 11.75 8C11.75 8.4375 11.4062 8.75 11 8.75H5C4.5625 8.75 4.25 8.4375 4.25 8C4.25 7.59375 4.5625 7.25 5 7.25H11ZM8 0C12.4062 0 16 3.59375 16 8C16 12.4375 12.4062 16 8 16C3.5625 16 0 12.4375 0 8C0 3.59375 3.5625 0 8 0ZM8 14.5C11.5625 14.5 14.5 11.5938 14.5 8C14.5 4.4375 11.5625 1.5 8 1.5C4.40625 1.5 1.5 4.4375 1.5 8C1.5 11.5938 4.40625 14.5 8 14.5Z"
+  fill="#A3A3A3"/>
+</svg></span>Dodatkowe koszty
+            </div>
+            <div>              <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"
+                                          fill="none">
+<path
+  d="M11 7.25C11.4062 7.25 11.75 7.59375 11.75 8C11.75 8.4375 11.4062 8.75 11 8.75H5C4.5625 8.75 4.25 8.4375 4.25 8C4.25 7.59375 4.5625 7.25 5 7.25H11ZM8 0C12.4062 0 16 3.59375 16 8C16 12.4375 12.4062 16 8 16C3.5625 16 0 12.4375 0 8C0 3.59375 3.5625 0 8 0ZM8 14.5C11.5625 14.5 14.5 11.5938 14.5 8C14.5 4.4375 11.5625 1.5 8 1.5C4.40625 1.5 1.5 4.4375 1.5 8C1.5 11.5938 4.40625 14.5 8 14.5Z"
+  fill="#A3A3A3"/>
+</svg></span>Tracisz na wartości auta
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
