--- a/src/app/_components/home-page/_components/why-us/why-us.html
+++ b/src/app/_components/home-page/_components/why-us/why-us.html
@@ -25,10 +25,6 @@
       <div class="description">
         <span>Z Flexmile płacisz tylko za to, z czego korzystasz – bez zobowiązań, wkładu własnego i niespodzianek.  Po prostu wybierasz model, podpisujesz umowę online i jedziesz. Tak działa mobilność na Twoich zasadach.</span>
       </div>
-      <div class="cars">
-        <div class="left"></div>
-        <div class="right"></div>
-      </div>
       <div class="table">
         <div class="table-left">
           <div class="table-left_header">Wynajem flexmile - zalety!</div>
@@ -117,6 +113,14 @@
 </svg></span>Tracisz na wartości auta
             </div>
           </div>
+        </div>
+      </div>
+      <div class="cars">
+        <div class="left">
+          <img src="/layout/images/left-car.webp" alt="flexmile">
+        </div>
+        <div class="right">
+          <img src="/layout/images/right-car.webp" alt="flexmile">
         </div>
       </div>
     </div>
