--- a/src/app/_components/home-page/home-page.html
+++ b/src/app/_components/home-page/home-page.html
@@ -15,11 +15,12 @@
       </div>
     </div>
     <div class="home-offers--list">
-      @if(offersList?.offers?.length){
-        <flexmile-homepage-list [offerList]="offersList"></flexmile-homepage-list>
+      @if (offersList?.offers?.length) {
+                <flexmile-homepage-list [offerList]="offersList"></flexmile-homepage-list>
       }
       <div class="pt-5 pb-7 flex align-items-center justify-content-center">
-        <flexmile-button label="Zobacz więcej" iconPosition="right" icon="pi-arrow-right" btnClass="mr-3"></flexmile-button>
+        <flexmile-button label="Zobacz więcej" iconPosition="right" icon="pi-arrow-right"
+                         btnClass="mr-3"></flexmile-button>
       </div>
     </div>
   </div>
@@ -27,4 +28,27 @@
 <flexmile-why-us></flexmile-why-us>
 <flexmile-faq></flexmile-faq>
 <flexmile-opinions></flexmile-opinions>
+
+<div class="add_info py-7">
+  <div class="container">
+    <div class="grid mt-0">
+      <div class="col-6">
+        <div class="_d">
+          <h2 class="pb-4">Odbierz w salonie<br>lub zamów dostawę<br>pod dom!</h2>
+          <span class="block pb-6">
+        Nie trać czasu na formalności czy dojazdy. Z Flexmile wszystko załatwisz online, a samochód odbierzesz tam, gdzie Ci najwygodniej. Współpracujemy z siecią sprawdzonych salonów w całej Polsce, ale jeśli wolisz pełną wygodę – przywieziemy auto pod dom. Bez dodatkowych kosztów, bez stresu, gotowe do jazdy od pierwszej minuty.
+      </span>
+          <div>
+            <flexmile-button label="Sprawdź ofertę" iconPosition="right" icon="pi-arrow-right"
+                             btnClass="mr-3"></flexmile-button>
+          </div>
+        </div>
+      </div>
+      <div class="col-6 flex align-items-center justify-content-end">
+        <div class="_img"></div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <flexmile-player label="Kim jesteśmy?" fileName="dzien_dobry.m4a"></flexmile-player>
